infrastructure/environments/cloudformation/full/la/vpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description:  This template deploys a VPC, with a pair of public and private subnets spread
  across two Availability Zones. It deploys an internet gateway, with a default
  route on the public subnets. It deploys a pair of NAT gateways (one in each AZ),
  and default routes for them in the private subnets.

Parameters:
  Environment:
    Description: An environment name that is prefixed to resource names. Valid values are dev, staging, prod
    Type: String

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.192.0.0/16

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.192.10.0/24

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.192.11.0/24

  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.192.20.0/24

  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.192.21.0/24

  DagitHostPort:
    Type: String
    Default: "3000"
    Description: Port the dagit Instance is hosted

  CodeServerPort:
    Type: String
    Default: "4000"
    Description: Port the code server is running on.

  DatabaseSubnetCIDR1:
    Type: String
    Default: 10.192.30.0/24
    Description: CIDR Block for the database subnet

  DatabaseSubnetCIDR2:
    Type: String
    Default: 10.192.31.0/24
    Description: CIDR Block for the database subnet

  DatabasePort:
    Type: String
    Default: 3306
    Description: Port to connect to the database

  DataStoreBucket:
    Type: String
    Description: Arn of the Data store s3 bucket

  WorkspaceBucket:
    Type: String
    Description: Arn of the Workspace s3 bucket

  SharedBucket:
    Type: String
    Description: Arn of the Shared s3 bucket

  ExternalDataBucket:
    Type: String
    Description: Arn of the External Data s3 bucket that contains data from external sources (e.g. ONS)

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref Environment

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref Environment

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Environment} Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Environment} Public Subnet (AZ2)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${Environment} Private Subnet (AZ1)

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs  '' ]
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${Environment} Private Subnet (AZ2)

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGatewayDatabaseEIP1:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGatewayDatabaseEIP2:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGatewayDatabase1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayDatabaseEIP1.AllocationId
      SubnetId: !Ref DatabaseSubnet1

  NatGatewayDatabase2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayDatabaseEIP2.AllocationId
      SubnetId: !Ref DatabaseSubnet2

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Environment} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Environment} Private Routes (AZ1)

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    DependsOn: PrivateRouteTable1
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${Environment} Private Routes (AZ2)"

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  S3GatewayEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Gateway'
      VpcId: !Ref VPC
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - "s3:DeleteObjectTagging"
              - "s3:ListBucketMultipartUploads"
              - "s3:DeleteObjectVersion"
              - "s3:GetObjectVersionTagging"
              - "s3:ListBucketVersions"
              - "s3:GetObjectAttributes"
              - "s3:PutObjectVersionTagging"
              - "s3:ListBucket"
              - "s3:DeleteObjectVersionTagging"
              - "s3:GetBucketAcl"
              - "s3:GetObjectVersionAttributes"
              - "s3:PutObject"
              - "s3:GetObjectAcl"
              - "s3:GetObject"
              - "s3:GetObjectVersionAcl"
              - "s3:GetObjectTagging"
              - "s3:PutObjectTagging"
              - "s3:DeleteObject"
              - "s3:GetBucketLocation"
              - "s3:GetObjectVersion"
            Resource:
              - !Ref DataStoreBucket
              - !Ref WorkspaceBucket
              - !Ref SharedBucket
              - !Ref ExternalDataBucket
              - !Sub "${DataStoreBucket}/*"
              - !Sub "${WorkspaceBucket}/*"
              - !Sub "${SharedBucket}/*"
              - !Sub "${ExternalDataBucket}/*"
          - Effect: Allow
            Principal: '*'
            Action:
              - 's3:ListBucket'
            Resource:
              - !Ref DataStoreBucket
              - !Ref WorkspaceBucket
              - !Ref SharedBucket
              - !Ref ExternalDataBucket
      RouteTableIds:
        - !Ref PrivateRouteTable1
        - !Ref PrivateRouteTable2

  DatabaseInterfacePrivateEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.rds'
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      SecurityGroupIds:
        - !Ref DaemonSecurityGroup
        - !Ref CodeServerSecurityGroup
        - !Ref DatabaseSecurityGroup
      PrivateDnsEnabled: true

  S3InterfacePrivateEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref VPC
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      SecurityGroupIds:
        - !Ref DaemonSecurityGroup
        - !Ref CodeServerSecurityGroup
      PrivateDnsEnabled: true

  PrivateServiceDiscoveryNamespace:
    Type: AWS::ServiceDiscovery::PrivateDnsNamespace
    Properties:
      Name: my-namespace.local
      Vpc: !Ref VPC

  DagsterWebserverDiscoveryService:
    Type: AWS::ServiceDiscovery::Service
    Properties:
      Name: dagster-webserver
      NamespaceId: !Ref PrivateServiceDiscoveryNamespace
      DnsConfig:
        DnsRecords:
          - Type: A
            TTL: 10
        RoutingPolicy: WEIGHTED
      HealthCheckCustomConfig:
        FailureThreshold: 1

  DaemonSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupName: !Sub "daemon-sg-${Environment}"
      GroupDescription: "Security group for the dagster daemon"
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1

  CodeServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupName: !Sub "codeserver-sg-${Environment}"
      GroupDescription: "Security Group for the Code Server"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 4000
          ToPort: !Ref CodeServerPort
          SourceSecurityGroupId: !Ref DaemonSecurityGroup
        - IpProtocol: tcp
          FromPort: 4000
          ToPort: !Ref CodeServerPort
          SourceSecurityGroupId: !Ref DagitSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1

  DagsterTriggerOneOffSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupName: !Sub "dagsteroneoff-sg-${Environment}"
      GroupDescription: "Security Group for the Lambda which triggers a Dagster job"
      VpcId: !Ref VPC
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1

  DagitSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupName: !Sub "dagit-sg-${Environment}"
      GroupDescription: "Security Group for the Dagit Interface"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DagitHostPort
          ToPort: !Ref DagitHostPort
          SourceSecurityGroupId: !Ref DagsterTriggerOneOffSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupDescription: "Security Group for the database"
      GroupName: !Sub "database-sg-${Environment}"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref DatabasePort
          ToPort: !Ref DatabasePort
          SourceSecurityGroupId: !Ref DagitSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref DatabasePort
          ToPort: !Ref DatabasePort
          SourceSecurityGroupId: !Ref DaemonSecurityGroup
        - IpProtocol: tcp
          FromPort: !Ref DatabasePort
          ToPort: !Ref DatabasePort
          SourceSecurityGroupId: !Ref CodeServerSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: -1

  DatabaseSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for Aurora
      SubnetIds:
        - !Ref DatabaseSubnet1
        - !Ref DatabaseSubnet2

  DatabaseSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref DatabaseSubnetCIDR1
      AvailabilityZone: !Select [ 0, !GetAZs '' ]

  DatabaseSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref DatabaseSubnetCIDR2
      AvailabilityZone: !Select [ 1, !GetAZs '' ]

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC

  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]

  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1

  PublicSubnet2:
    Description: A reference to the public subnet in the 2nd Availability Zone
    Value: !Ref PublicSubnet2

  PrivateSubnet1:
    Description: A reference to the private subnet in the 1st Availability Zone
    Value: !Ref PrivateSubnet1

  PrivateSubnet2:
    Description: A reference to the private subnet in the 2nd Availability Zone
    Value: !Ref PrivateSubnet2

  DagitSecurityGroup:
    Description: Security group for Dagit
    Value: !Ref DagitSecurityGroup

  DaemonSecurityGroup:
    Description: Security group for the Daemon
    Value: !Ref DaemonSecurityGroup

  DagsterTriggerOneOffSecurityGroup:
    Description: Security group for the One Off Dagster Trigger Lambda
    Value: !Ref DagsterTriggerOneOffSecurityGroup

  CodeServerSecurityGroup:
    Description: Security group for the Code Server
    Value: !Ref CodeServerSecurityGroup

  DatabaseSecurityGroup:
    Description: Security Group for the database
    Value: !Ref DatabaseSecurityGroup

  DatabaseSubnetGroup:
    Description: Subnet Group for the database
    Value: !Ref DatabaseSubnetGroup

  PrivateServiceDiscoveryNamespace:
    Description: Name of the Namespace for private service discovery. To be used for Service Connect for ECS
    Value: !GetAtt PrivateServiceDiscoveryNamespace.Id

  DagsterWebserverDiscoveryServiceArn:
    Description: Service Discovery Service for the Dagster Webserver. To be used for Lambda to find the webserver in ECS
    Value: !GetAtt DagsterWebserverDiscoveryService.Arn
